--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
 # Site settings
-baseURL = "https://milka.fookoff.com"
 languageCode = "en-US"
 title = "Milka - Dalmatian"
 theme = "hugo-split-theme"
@@ -7,6 +6,18 @@ disableKinds = ["section", "taxonomy", "taxonomyTerm", "RSS", "sitemap"]
 
 # Copyright
 copyright = "Ivan Fedotov"
+
+defaultContentLanguage = 'en'
+defaultContentLanguageInSubdir = true
+
+[languages]
+  [languages.en]
+    title = 'Milka - Dalmatian'
+    weight = 1
+  [languages.ru]
+    languagedirection = 'ru'
+    title = 'Милка - Далматин'
+    weight = 2
 
 [params]
 
@@ -37,4 +48,19 @@ copyright = "Ivan Fedotov"
 
       [[params.links.list1.link]]
         text = "Telegram"
+        url = "https://t.me/subject108"
+
+    [params.links.list2]
+      heading = "ㅤ"
+
+      [[params.links.list2.link]]
+        text = "WhatsApp"
+        url = "mailto://milka@spam.fookoff.com"
+
+      [[params.links.list2.link]]
+        text = "Viber"
+        url = "https://instagram.com/milka_dalmatian"
+
+      [[params.links.list2.link]]
+        text = "Vkontakte"
         url = "https://t.me/subject108"
